namespaces/ob/emailservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: ob
spec:
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      serviceAccountName: emailservice
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: us-east4-docker.pkg.dev/mygke-200/containers/boutique/emailservice:v0.3.7
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          timeoutSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          timeoutSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: ob
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice
  namespace: ob
spec:
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
     - port: 8080
       protocol: TCP
  egress:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: emailservice
  namespace: ob
spec:
  selector:
    matchLabels:
      app: emailservice
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/onlineboutique/sa/checkoutservice"]
    to:
      - operation:
          paths: ["/hipstershop.EmailService/SendOrderConfirmation"]
          methods: ["POST"]
          ports: ["8080"]
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: emailservice
  namespace: ob
spec:
  workloadSelector:
    labels:
      app: emailservice
  egress:
  - hosts:
    - "istio-system/*"
