namespaces/ob/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ob
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: frontend
      containers:
        - name: server
          image: us-east4-docker.pkg.dev/mygke-200/containers/boutique/frontend:v0.3.7
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 30m
              memory: 27Mi
            limits:
              cpu: 70m
              memory: 151Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ob
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: ob
spec:
  hosts:
    - ob.alwaysupalwayson.com
  gateways:
  - asm-ingress/asm-ingressgateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
  namespace: ob
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: loadgenerator
    - namespaceSelector:
        matchLabels:
          name: asm-ingress
      podSelector:
        matchLabels:
          app: asm-ingressgateway
    ports:
     - port: 8080
       protocol: TCP
  egress:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend
  namespace: ob
spec:
  selector:
    matchLabels:
      app: frontend
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/ob/sa/loadgenerator", "cluster.local/ns/asm-ingress/sa/asm-ingressgateway"]
    to:
      - operation:
          ports: ["8080"]
          methods: ["GET", "POST"]
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: frontend
  namespace: ob
spec:
  workloadSelector:
    labels:
      app: frontend
  egress:
  - hosts:
    - "istio-system/*"
    - "./adservice.ob.svc.cluster.local"
    - "./cartservice.ob.svc.cluster.local"
    - "./checkoutservice.ob.svc.cluster.local"
    - "./currencyservice.ob.svc.cluster.local"
    - "./productcatalogservice.ob.svc.cluster.local"
    - "./recommendationservice.ob.svc.cluster.local"
    - "./shippingservice.ob.svc.cluster.local"
